--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
       </div>
     </div>
     <ul class="menu__list">
+      <select class="menu__select" id="mbPOCControlsLangDrop"></select>
+
       <li class="menu__item menu--home">
-        <a href="#start" class="link">STRONA GŁÓWNA</a>
+        <a href="#start" class="link" data-mlr-text>STRONA GŁÓWNA</a>
       </li>
       <li class="menu__item menu--about">
-        <a href="#info" class="link">O PROJEKCIE</a>
+        <a href="#info" class="link" data-mlr-text>O PROJEKCIE</a>
       </li>
       <li class="menu__item menu--more">
-        <a href="#more" class="link">WIĘCEJ</a>
+        <a href="#more" class="link" data-mlr-text>WIĘCEJ</a>
       </li>
       <li class="menu__item menu--us">
-        <a href="#about" class="link">O NAS</a>
+        <a href="#about" class="link" data-mlr-text>O NAS</a>
       </li>
       <li class="menu__item menu--sign-in">
-        <a href="#news" class="link">ZAPISZ SIĘ</a>
+        <a href="#news" class="link" data-mlr-text>ZAPISZ SIĘ</a>
       </li>
     </ul>
   </nav>
@@ -66,26 +68,26 @@
             <div class="hero__icon">
               <i class="h--icon fas fa-seedling"></i>
             </div>
-            <h1>Nadchodzi aplikacja dla Eco Maniaków</h1>
+            <h1 data-mlr-text>Nadchodzi aplikacja dla Eco Maniaków</h1>
           </div>
           <div class="hero__prompt">
             <div class="hero__icon">
               <i class="h--icon fas fa-map-marker-alt"></i>
             </div>
-            <h1>Znajdź miejsce, gdzie możesz zjeść fit posiłki</h1>
+            <h1 data-mlr-text>Znajdź miejsce, gdzie możesz zjeść fit posiłki</h1>
           </div>
           <div class="hero__prompt">
             <div class="hero__icon">
               <i class="h--icon fab fa-pagelines"></i>
             </div>
-            <h1>Kupuj naturalne produkty</h1>
+            <h1 data-mlr-text>Kupuj naturalne produkty</h1>
           </div>
         </div>
 
         <!------ Zapis na premiere ---------------------->
         <div class="hero__button section">
           <button type="button" class="hero__button">
-            <a href="#news" class="link__button">Bądź pierwszy</a>
+            <a href="#news" class="link__button" data-mlr-text>Bądź pierwszy</a>
           </button>
         </div>
       </article>
@@ -101,16 +103,16 @@
   <div class="container" id="container">
     <section class="info" id="info">
       <div class="info__title">
-        <header class="title">O PROJEKCIE</header>
+        <header class="title" data-mlr-text>O PROJEKCIE</header>
       </div>
       <div class="info__item info--1">
         <div class="info__icon icon--1">
           <i class="fas fa-utensils"></i>
         </div>
-        <div class="info__header">
+        <div class="info__header" data-mlr-text>
           RESTAURACJE
         </div>
-        <p>
+        <p data-mlr-text>
           Burger z pokrzywy? Pita z falafelem? Na miejscu, czy z dowozem?
           Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę! U
           nas możesz szukać knajpek według lokalizacji lub po nazwie dania.
@@ -122,10 +124,10 @@
         <div class="info__icon icon--2">
           <i class="fas fa-book-open"></i>
         </div>
-        <div class="info__header">
+        <div class="info__header" data-mlr-text>
           PRZEPISY
         </div>
-        <p>
+        <p data-mlr-text>
           Każdy czasem chce coś ugotować sam. Kiedy w głowie pustka i pomysłów
           brak, ZdrowEat przychodzi z odsieczą! Sałatki, power bowle, burgery
           roślinne - u nas znajdziesz sprawdzone przepisy, dzięki którym Twoja
@@ -137,10 +139,10 @@
         <div class="info__icon icon--3">
           <i class="fas fa-store"></i>
         </div>
-        <div class="info__header">
+        <div class="info__header" data-mlr-text>
           SKLEPY
         </div>
-        <p>
+        <p data-mlr-text>
           Znalazłeś już swój wymarzony przepis. Gotujesz. Smaki i aromaty
           tworzą idealną harmonię. Już tylko ostatnie składniki. Ale zaraz...
           Gdzie znaleźć płatki drożdżowe? Gdzie szukać mąki jaglanej? <br />
@@ -152,10 +154,10 @@
         <div class="info__icon icon--4">
           <i class="fas fa-shipping-fast"></i>
         </div>
-        <div class="info__header header--4">
+        <div class="info__header header--4" data-mlr-text>
           SKLEP ONLINE
         </div>
-        <p>
+        <p data-mlr-text>
           Sklep zamknęli Ci przed nosem? Trwa wojna lub pandemia? Nie łam się
           - sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów
           BIO od sprawdzonych dostawców. Jesteśmy czynni 24h na dobę, 7 dni w
@@ -169,25 +171,25 @@
     <!--------------------MORE INFO -------------------------->
     <section class="moreInfo" id="more">
       <div class="moreInfo__wrapper">
-        <div class="moreInfo__title">Dowiedz się więcej</div>
+        <div class="moreInfo__title" data-mlr-text>Dowiedz się więcej</div>
         <div class="moreInfoBox">
           <div data-aos="fade-right">
             <div class="moreInfo__icon moreIcon--1">
               <i class="fas fa-piggy-bank"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Promocje
             </div>
-            <p>
+            <p data-mlr-text>
               Koniec z wymówkami, że jak zdrowo to zaraz drogo! Tylko u nas
               możesz zdobyć atrakcyjne kody rabatowe do restauracji jak
               również do sklepów ze zdrową żywnością.
             </p>
-            <p>
+            <p data-mlr-text>
               Mało tego - jeśli zapiszesz się na nasz Newsletter otrzymasz na
               start 10% rabatu na nasz asortyment!
             </p>
-            <p>Nie przegap takiej okazji!</p>
+            <p data-mlr-text>Nie przegap takiej okazji!</p>
           </div>
         </div>
         <div class="moreInfoBox">
@@ -195,15 +197,15 @@
             <div class="moreInfo__icon moreIcon--2">
               <i class="fas fa-shopping-bag"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Kupuj lokalnie
             </div>
-            <p>
+            <p data-mlr-text>
               Masz dosyć przetworzonej żywności? Po powrocie ze sklepu nie
               dają Ci spokoju myśli czy jajka były z chowu klatkowego, a chleb
               nie spędził w zamrażarce pół roku?
             </p>
-            <p>
+            <p data-mlr-text>
               Razem z nami wspieraj lokalnych producentów. Kupując u nas
               wspierasz nie tylko lokalny biznes i ochronę środowiska, ale
               przede wszystkim swoje zdrowie.
@@ -215,10 +217,10 @@
             <div class="moreInfo__icon moreIcon--3">
               <i class="fas fa-leaf"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Ekologia
             </div>
-            <p>
+            <p data-mlr-text>
               Na zdrowej żywności nie poprzestajemy. Stosujemy wysokiej
               jakości jednorazowe, ekologiczne opakowania do przewozu
               zamówień. Są to przyjazne dla środowiska, w pełni
@@ -231,10 +233,10 @@
             <div class="moreInfo__icon moreIcon--4">
               <i class="fas fa-users"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Nasi eksperci
             </div>
-            <p>
+            <p data-mlr-text>
               Masz wątpliwości, który produkt spełni najlepiej Twoje
               oczekiwania? Którą restaurację wybrać albo które mleko roślinne
               jest odpowiednie dla Twojej diety? Napisz do naszych Ekspertów!
@@ -247,10 +249,10 @@
             <div class="moreInfo__icon moreIcon--5">
               <i class="fas fa-envelope"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Bądź na bieżąco!
             </div>
-            <p>
+            <p data-mlr-text>
               Zapisując się na Newsletter masz pewność, że na bieżąco będziemy
               Cię informować o wszystkich nowinkach żywieniowych, wydarzeniach
               kulinarnych w Trójmieście oraz o promocjach.
@@ -262,10 +264,10 @@
             <div class="moreInfo__icon moreIcon--6">
               <i class="fas fa-mobile-alt"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Aplikacja ZdrowEat
             </div>
-            <p>
+            <p data-mlr-text>
               Nasza aplikacja jest prosta w obsłudze, a co najważniejsze -
               zupełnie darmowa! Czekaj na powiadomienie na maila. Damy Ci znać
               zaraz po jej premierze.
@@ -277,10 +279,10 @@
             <div class="moreInfo__icon moreIcon--7">
               <i class="fas fa-handshake"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Poznajmy się
             </div>
-            <p>
+            <p data-mlr-text>
               Organizujemy warsztaty i spotkania kulinarne! Jeśli jesteś
               ZdrowoManiakiem polub nas na facebooku, śledź Newsletter i
               koniecznie przyjdź na jedno ze spotkań!
@@ -292,10 +294,10 @@
             <div class="moreInfo__icon moreIcon--8">
               <i class="fas fa-shield-alt"></i>
             </div>
-            <div class="moreInfo__header">
+            <div class="moreInfo__header" data-mlr-text>
               Bezpieczeństwo
             </div>
-            <p>
+            <p data-mlr-text>
               W tym trudnym czasie związanym z epidemią, staramy się Wam wyjśc
               na przeciw. Nie rezygnując ze zdrowych przyzwyczajeń, nadal
               możesz zamawiać produkty w naszym sklepie i jedzenie na wynos -
@@ -308,7 +310,7 @@
     <!-------------------- ABOUT US -------------------------->
     <section class="aboutUs" id="about">
       <div class="aboutUs__title">
-        <header class="aU__title">O NAS - TO MY TWORZYMY ZDROWEAT!</header>
+        <header class="aU__title" data-mlr-text>O NAS - TO MY TWORZYMY ZDROWEAT!</header>
       </div>
       <div class="aboutUs__content content--1">
         <div data-aos="flip-left" class="photo__wrapper">
@@ -332,10 +334,10 @@
         <div class="aboutUs__name">
           KARINA MIERNIK
         </div>
-        <p>
+        <p data-mlr-text>
           Na codzień projektuję odnawialne źródła energii.
         </p>
-        <p>
+        <p data-mlr-text>
           Osobiście zaś uwielbiam podróżować, spać pod namiotem, malować
           (obrazy), a szczytem marzeń jest wieczór z dobrą książką i kubkiem
           gorącej czekolady.
@@ -376,7 +378,7 @@
         <div class="aboutUs__name">
           PAULINA MALINOWSKA
         </div>
-        <p>
+        <p data-mlr-text>
           Inżynier dobrego jedzenia, który na codzień nadzoruje budynki z
           betonu, a w wolnej chwili ogląda tajlandzkie seriale i rysuje
           przystojnych panów. Totalny freak fantastyki, spędzający większą
@@ -418,7 +420,7 @@
         <div class="aboutUs__name">
           MICHAŁ MARCHEWA
         </div>
-        <p>
+        <p data-mlr-text>
           Technolog żywności. <br />
           Pilnuję merytorycznej treści przekazywanych na stronie informacji.
           Prywatnie uwielbiam sport (piłka nożna, tenis) i wszystko co
@@ -460,7 +462,7 @@
         <div class="aboutUs__name">
           MACIEJ LANGOWSKI
         </div>
-        <p>
+        <p data-mlr-text>
           Projektant konstrukcji stalowych. <br />Prywatnie - fan niezdrowego
           jedzenia, który pod wpływem nacisków i rosnącej masy ciała szuka
           smakowitych alternatyw dla ociekających tłuszczem mięsiw.
@@ -485,13 +487,13 @@
     <footer class="newsletter" id="news">
       <div class="newsletter__wrapper">
         <div class="newsletter__title">
-          <p>Zapisz się do Newslettera!</p>
+          <p data-mlr-text>Zapisz się do Newslettera!</p>
         </div>
-        <p>
+        <p data-mlr-text>
           Skorzystaj z poniższego formularza, aby być na bieżąco z wszystkimi
           informacjami dotyczącymi aplikacji.
         </p>
-        <p>
+        <p data-mlr-text>
           Wyślemy Ci jednego maila z informacją, że możesz już korzystać z
           aplikacji ZdrowEat. Biorąc udział w zapisie uzyskasz jak najszybszy
           dostęp do ZdrowEat!
@@ -500,7 +502,7 @@
           <section class="newsletter__input">
             <div class="newsletter__icon"><i class="fa fa-user"></i></div>
             <label class="sr-only" for="name"></label>
-            <input type="text" class="input" name="name" id="name" placeholder="Imię" />
+            <input type="text" class="input" name="name" id="name" placeholder="Imię" data-mlr-text />
             <small>Error</small>
           </section>
 
@@ -515,26 +517,26 @@
 
           <div class="newsletter__input box">
             <input type="checkbox" class="input" id="opt-in" />
-            <label for="opt-in">Wyrażam zgodę na otrzymywanie informacji handlowych drogą
+            <label for="opt-in" data-mlr-text>Wyrażam zgodę na otrzymywanie informacji handlowych drogą
               elektroniczną na podany powyżej adres poczty elektronicznej
               wysyłanych przez ZdrowEat</label>
             <small>Error</small>
           </div>
 
           <section class="newsletter__input submission">
-            <button class="newsletter__button">Wyślij</button>
+            <button class="newsletter__button" data-mlr-text>Wyślij</button>
           </section>
         </form>
       </div>
     </footer>
     <div class="copyright">
-      <p>Strona stworzona przez Karinę, Paulinę, Michała i Maćka</p>
-      <p>Wszelkie prawa zastrzeżone</p>
+      <p data-mlr-text> Strona stworzona przez Karinę, Paulinę, Michała i Maćka</p>
+      <p data-mlr-text>Wszelkie prawa zastrzeżone</p>
     </div>
 
     <div class="cookie hidden">
       <div class="cookie__text">
-        <p>
+        <p data-mlr-text>
           ZdrowEat wykorzystuje pliki cookie zgodnie z ustawieniami Twojej
           przeglądarki. Korzystając z naszych usług, akceptujesz używanie
           takich plików. Więcej na ten temat możesz przeczytać w
@@ -548,6 +550,7 @@
   </div>
 
   <script src="/script.js"></script>
+  <script src="/lang.js"></script>
 </body>
 
 </html>
