--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           Burger z pokrzywy? Pita z falafelem? Na miejscu, czy z dowozem?
           Nasza interaktywna mapa pozwoli Ci znaleźć to, na co masz ochotę! U
           nas możesz szukać knajpek według lokalizacji lub po nazwie dania.
-          <br />Zdrowa kuchnia w Trójmieście nie ma przed nami żadnych
+          Zdrowa kuchnia w Trójmieście nie ma przed nami żadnych
           tajemnic!
         </p>
       </div>
@@ -131,7 +131,7 @@
           Każdy czasem chce coś ugotować sam. Kiedy w głowie pustka i pomysłów
           brak, ZdrowEat przychodzi z odsieczą! Sałatki, power bowle, burgery
           roślinne - u nas znajdziesz sprawdzone przepisy, dzięki którym Twoja
-          dieta będzie smaczna i zbilansowana. <br />
+          dieta będzie smaczna i zbilansowana.
           Gotuj zdrowo - żyj zdrowo!
         </p>
       </div>
@@ -145,8 +145,8 @@
         <p data-mlr-text>
           Znalazłeś już swój wymarzony przepis. Gotujesz. Smaki i aromaty
           tworzą idealną harmonię. Już tylko ostatnie składniki. Ale zaraz...
-          Gdzie znaleźć płatki drożdżowe? Gdzie szukać mąki jaglanej? <br />
-          W tej sekcji poznasz odpowiedzi na te pytania. <br />
+          Gdzie znaleźć płatki drożdżowe? Gdzie szukać mąki jaglanej?
+          W tej sekcji poznasz odpowiedzi na te pytania.
           Sklepy ze zdrową żywnością w Trójmieście - tylko na ZdrowEat!
         </p>
       </div>
@@ -162,7 +162,7 @@
           - sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów
           BIO od sprawdzonych dostawców. Jesteśmy czynni 24h na dobę, 7 dni w
           tygodniu, a dostawy realizujemy bezpłatnie w ciągu 1 doby od
-          zamówienia. <br />
+          zamówienia.
           Sprawdź nas!
         </p>
       </div>
@@ -421,7 +421,7 @@
           MICHAŁ MARCHEWA
         </div>
         <p data-mlr-text>
-          Technolog żywności. <br />
+          Technolog żywności.
           Pilnuję merytorycznej treści przekazywanych na stronie informacji.
           Prywatnie uwielbiam sport (piłka nożna, tenis) i wszystko co
           związane z awioniką.
@@ -463,7 +463,7 @@
           MACIEJ LANGOWSKI
         </div>
         <p data-mlr-text>
-          Projektant konstrukcji stalowych. <br />Prywatnie - fan niezdrowego
+          Projektant konstrukcji stalowych. Prywatnie - fan niezdrowego
           jedzenia, który pod wpływem nacisków i rosnącej masy ciała szuka
           smakowitych alternatyw dla ociekających tłuszczem mięsiw.
         </p>
