--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
     <!------------------ HERO -------------------------->
-    <div class="hero__wrapper" id="dom">
+    <div class="hero__wrapper" id="start">
       <div class="hero__background slide"></div>
       <div class="hero__background slide--1 slide none"></div>
       <div class="hero__background slide--2 slide none"></div>
