--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   </nav>
 
 
-    <!------------------ HERO -------------------------->
-    <div class="hero__wrapper" id="dom">
-      <div class="hero__background slide"></div>
-      <div class="hero__background slide--1 slide none"></div>
-      <div class="hero__background slide--2 slide none"></div>
+  <!------------------ HERO -------------------------->
+  <div class="hero__wrapper" id="start">
+    <div class="hero__background slide"></div>
+    <div class="hero__background slide--1 slide none"></div>
+    <div class="hero__background slide--2 slide none"></div>
 
 
     <header class="hero">
