Zmiana adresów odnosnikow

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <a href="https://www.facebook.com/" class="social--1">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.onet.pl/" class="social--1">
+            <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--1">
               <i class="fas fa-home"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social--1">
@@ -347,7 +347,7 @@
           <a href="https://www.facebook.com/" class="social--1">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.onet.pl/" class="social--1">
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--1">
             <i class="fas fa-home"></i>
           </a>
           <a href="https://www.linkedin.com/" class="social--1">
@@ -365,7 +365,7 @@
             <a href="https://www.facebook.com/" class="social--2">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.onet.pl/" class="social--2">
+            <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--2">
               <i class="fas fa-home"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social--2">
@@ -389,7 +389,7 @@
           <a href="https://www.facebook.com/" class="social--2">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.onet.pl/" class="social--2">
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--2">
             <i class="fas fa-home"></i>
           </a>
           <a href="https://www.linkedin.com/" class="social--2">
@@ -407,7 +407,7 @@
             <a href="https://www.facebook.com/" class="social--3">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.onet.pl/" class="social--3">
+            <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--3">
               <i class="fas fa-home"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social--3">
@@ -431,7 +431,7 @@
           <a href="https://www.facebook.com/" class="social--3">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.onet.pl/" class="social--3">
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--3">
             <i class="fas fa-home"></i>
           </a>
           <a href="https://www.linkedin.com/" class="social--3">
@@ -449,7 +449,7 @@
             <a href="https://www.facebook.com/" class="social--4">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.onet.pl/" class="social--4">
+            <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--4">
               <i class="fas fa-home"></i>
             </a>
             <a href="https://www.linkedin.com/" class="social--4">
@@ -472,7 +472,7 @@
           <a href="https://www.facebook.com/" class="social--4">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.onet.pl/" class="social--4">
+          <a href="https://github.com/infoshareacademy/jfdz14-zdroweat" class="social--4">
             <i class="fas fa-home"></i>
           </a>
           <a href="https://www.linkedin.com/" class="social--4">
